# roki

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  SPEC.md  WORKFLOW.example.md
.claude/: settings.json
crates/roki-api-types/: Cargo.toml
crates/roki-api-types/src/: escalations.rs  events.rs  healthz.rs  lib.rs  refresh.rs  tickets.rs
crates/roki-daemon/: Cargo.toml  README.md
crates/roki-daemon/examples/: fake_claude.rs
crates/roki-daemon/src/: admission.rs  capture.rs  cli.rs  error.rs  events.rs  lib.rs  logging.rs  main.rs  permissions.rs  recovery_reader.rs  routing.rs  rule.rs  runner.rs  runtime.rs  session.rs  shutdown.rs  store_handle.rs  worktrees.rs
crates/roki-daemon/src/api/: log_layer.rs  mod.rs  routes.rs  sanitize.rs
crates/roki-daemon/src/api/projection/: cycles.rs  escalations.rs  events.rs  mod.rs  tickets.rs  visits.rs
crates/roki-daemon/src/cli/: events.rs  log.rs  mod.rs  repo.rs  workflow.rs
crates/roki-daemon/src/cli/shared/: config_resolve.rs  events_format.rs  mod.rs  sanitize.rs  tail.rs  visit_lookup.rs
crates/roki-daemon/src/config/: mod.rs  repos.rs  roki.rs  workflow.rs  workflow_md.rs
crates/roki-daemon/src/daemon/: cache.rs  cold_start.rs  cycle_metadata.rs  deps.rs  dispatcher.rs  inflight.rs  mod.rs  orphan.rs  real_runner.rs  shutdown.rs  ticket_task.rs
crates/roki-daemon/src/engine/: claude.rs  cleanup.rs  context.rs  cwd.rs  cycle.rs  cycle_state.rs  directive.rs  dispatch.rs  mod.rs  on_failure.rs  outcome.rs  phase.rs  policy.rs  real_state_runner.rs  sentinel.rs  session.rs  stall.rs  state_runtime.rs  stream.rs  template.rs  worktree.rs
crates/roki-daemon/src/engine/orchestrator_session/: action_parser.rs  adapter.rs  budget.rs  engine_impl.rs  events.rs  mod.rs
crates/roki-daemon/src/engine/phase_subprocess/: adapter.rs  catalog.rs  engine_impl.rs  exit.rs  mod.rs  override_resolver.rs  policy.rs
crates/roki-daemon/src/escalation/: entry.rs  mod.rs  queue.rs  ring.rs
crates/roki-daemon/src/exec/: ghq.rs  mod.rs  wt.rs
crates/roki-daemon/src/linear/: client.rs  graphql.rs  mod.rs  polling.rs  rate_limit.rs  ticket.rs  webhook.rs
crates/roki-daemon/src/observability/: mod.rs  ring.rs
crates/roki-daemon/src/orchestrator/: core.rs  escalation.rs  events.rs  hooks.rs  mod.rs  read.rs  recovery.rs  state.rs  tracker_bridge.rs
crates/roki-daemon/src/tools/: ghq.rs  linear_graphql.rs  mod.rs  roki_open_worktree.rs  wt.rs
crates/roki-daemon/src/tracker/: assignee.rs  linear.rs  mod.rs  model.rs  pre_admission.rs  refresh.rs  webhook.rs
crates/roki-daemon/src/workflow/: canonical.rs  mod.rs  parse.rs  render.rs  schema.rs  sugar.rs  validate.rs  watcher.rs
crates/roki-daemon/src/workspace/: layout.rs  mod.rs
crates/roki-daemon/src/worktree_manager/: allowlist.rs  mod.rs
crates/roki-daemon/tests/: agent_tool_open_worktree.rs  cli_parser.rs  e2e_assignment_loss.rs  e2e_bootstrap.rs  e2e_cross_repo_worktrees.rs  e2e_failure_retry.rs  e2e_happy_path.rs  e2e_multi_repo_rejection.rs  e2e_multi_repo_routing.rs  e2e_needs_classify_path_a.rs  e2e_needs_classify_path_b.rs  e2e_orchestrator_budget_exhausted.rs  e2e_orchestrator_crash.rs  e2e_orchestrator_unparseable.rs  e2e_phase_nonclean_retry.rs  e2e_recovery.rs  e2e_review_md_validation_retry.rs  e2e_spec_driven_happy.rs  e2e_vetoable_transition.rs  engine_claude.rs  engine_tool_dispatch.rs  integration_orchestrator_session.rs  integration_phase_subprocess.rs  integration_recovery.rs  integration_tracker.rs  integration_workflow_loader.rs  integration_worktree_lifecycle.rs  linear_graphql.rs  orchestrator_core.rs  orchestrator_recovery.rs  orchestrator_restart_recovery.rs  orchestrator_session.rs  orchestrator_workspace.rs  runtime_admission_pipe.rs  runtime_bind.rs  runtime_linear_endpoint_compose.rs  runtime_orchestrator_compose.rs  runtime_orchestrator_crash_compose.rs  runtime_phase_engine_compose.rs  runtime_recovery_compose.rs  (+13 more)
crates/roki-daemon/tests/common/: mod.rs
crates/roki-daemon/tests/e2e/: api_bind_failure_smoke.rs  api_cycle_and_visit_smoke.rs  api_disabled_smoke.rs  api_escalations_smoke.rs  api_events_since_smoke.rs  api_healthz_smoke.rs  api_non_loopback_warn_smoke.rs  api_refresh_backoff_smoke.rs  api_refresh_coalesce_smoke.rs  api_tickets_list_smoke.rs  canonical_branch_smoke.rs  cleanup_cycle_smoke.rs  cleanup_immediate_delete_yaml_smoke.rs  cleanup_shorthand_smoke.rs  cleanup_subcommand_smoke.rs  cli_events_offline_smoke.rs  cli_events_online_smoke.rs  cli_log_follow.rs  cli_log_smoke.rs  cli_repo_smoke.rs  cold_start_backoff_smoke.rs  cold_start_cleanup_mode_smoke.rs  cold_start_listener_parked_smoke.rs  cold_start_orphan_reconcile_smoke.rs  cold_start_partial_enum_smoke.rs  cold_start_two_tickets_smoke.rs  cycles_last_state_id_smoke.rs  daemon_dependency_missing_smoke.rs  escalation_cleanup_fs_error_smoke.rs  escalation_orphan_reconcile_smoke.rs  escalation_recursion_smoke.rs  eviction_in_flight_smoke.rs  eviction_no_cycle_smoke.rs  eviction_readmit_cancels_smoke.rs  eviction_readmit_reuse_smoke.rs  failure_unhandled_smoke.rs  fs_poison_smoke.rs  iteration_smoke.rs  on_failure_smoke.rs  per_repo_override_smoke.rs  (+27 more)
crates/roki-doctools/: Cargo.toml  README.md
crates/roki-doctools/src/: main.rs
crates/roki-store/: Cargo.toml
crates/roki-store/src/: error.rs  lib.rs  models.rs  sqlite.rs  store.rs
crates/roki-store/src/migrations/: 0001_init.sql  0002_cycles_uuid.sql  mod.rs
crates/roki-tui/: Cargo.toml
crates/roki-tui/src/: app.rs  cli.rs  config.rs  input.rs  lib.rs  main.rs  palette.rs  sanitize.rs  startup_log.rs
crates/roki-tui/src/client/: cycles.rs  escalations.rs  events.rs  mod.rs  refresh.rs  tickets.rs
crates/roki-tui/src/model/: escalations.rs  events.rs  mod.rs  status.rs  ticket_detail.rs  tickets.rs
crates/roki-tui/src/poll/: escalations.rs  events.rs  mod.rs  ticket_detail.rs  tickets.rs
crates/roki-tui/src/ui/: escalations.rs  events.rs  mod.rs  status_bar.rs  ticket_detail.rs  tickets.rs
crates/roki-tui/tests/: tui_palette_fallback.rs  tui_refresh_ack.rs  tui_smoke.rs
docs/: kinds.md  (+2 more)
(+211 files in other folders)
