[package]
name = "roki-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "roki walking-skeleton daemon: single-cycle Linear-driven phase runner"

[[bin]]
name = "roki"
path = "src/main.rs"

[[test]]
name = "skeleton_smoke"
path = "tests/e2e/skeleton_smoke.rs"

[[test]]
name = "iteration_smoke"
path = "tests/e2e/iteration_smoke.rs"

[[test]]
name = "session_smoke"
path = "tests/e2e/session_smoke.rs"

[[test]]
name = "stall_smoke"
path = "tests/e2e/stall_smoke.rs"

[[test]]
name = "run_terminal_smoke"
path = "tests/e2e/run_terminal_smoke.rs"

[[test]]
name = "cleanup_shorthand_smoke"
path = "tests/e2e/cleanup_shorthand_smoke.rs"

[[test]]
name = "cleanup_cycle_smoke"
path = "tests/e2e/cleanup_cycle_smoke.rs"

[[test]]
name = "on_failure_smoke"
path = "tests/e2e/on_failure_smoke.rs"

[[test]]
name = "recursion_bound_smoke"
path = "tests/e2e/recursion_bound_smoke.rs"

[[test]]
name = "failure_unhandled_smoke"
path = "tests/e2e/failure_unhandled_smoke.rs"

[[test]]
name = "fs_poison_smoke"
path = "tests/e2e/fs_poison_smoke.rs"

[[test]]
name = "cleanup_subcommand_smoke"
path = "tests/e2e/cleanup_subcommand_smoke.rs"

[[test]]
name = "worktree_lazy_smoke"
path = "tests/e2e/worktree_lazy_smoke.rs"

[[test]]
name = "worktree_cleanup_smoke"
path = "tests/e2e/worktree_cleanup_smoke.rs"

[[test]]
name = "worktree_fs_poison_smoke"
path = "tests/e2e/worktree_fs_poison_smoke.rs"

[[test]]
name = "worktree_cleanup_fs_error_smoke"
path = "tests/e2e/worktree_cleanup_fs_error_smoke.rs"

[[test]]
name = "persistent_parallel_smoke"
path = "tests/e2e/persistent_parallel_smoke.rs"

[[test]]
name = "persistent_two_cycles_smoke"
path = "tests/e2e/persistent_two_cycles_smoke.rs"

[[test]]
name = "persistent_cleanup_evict_readmit_smoke"
path = "tests/e2e/persistent_cleanup_evict_readmit_smoke.rs"

[[test]]
name = "persistent_sigint_drain_smoke"
path = "tests/e2e/persistent_sigint_drain_smoke.rs"

[[test]]
name = "persistent_sigint_timeout_smoke"
path = "tests/e2e/persistent_sigint_timeout_smoke.rs"

[[test]]
name = "persistent_no_diff_smoke"
path = "tests/e2e/persistent_no_diff_smoke.rs"

[[test]]
name = "cold_start_two_tickets_smoke"
path = "tests/e2e/cold_start_two_tickets_smoke.rs"

[[test]]
name = "cold_start_orphan_reconcile_smoke"
path = "tests/e2e/cold_start_orphan_reconcile_smoke.rs"

[[test]]
name = "cold_start_partial_enum_smoke"
path = "tests/e2e/cold_start_partial_enum_smoke.rs"

[[test]]
name = "cold_start_backoff_smoke"
path = "tests/e2e/cold_start_backoff_smoke.rs"

[features]
# Test-only seam: gates the `ROKI_LINEAR_GRAPHQL_URL` env-var override inside
# `linear::client` so the release binary always targets the hardcoded endpoint.
test-support = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
liquid = "0.26"
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
shell-words = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
temp-env = { version = "0.3", features = ["async_closure"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[lints]
workspace = true
