[package]
name = "roki-doctools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-reference graph tooling for roki specs and docs"

[[bin]]
name = "roki-doctools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
walkdir = "2"

[lints]
workspace = true
