[package]
name = "roki-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded SQLite store for roki daemon control plane (cycles, events, admission cache, escalations)"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "time", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
