[package]
name = "roki-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for the roki daemon's observability HTTP API"

[[bin]]
name = "roki-tui"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
roki-api-types = { path = "../roki-api-types" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde-well-known"] }
uuid = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tracing = "0.1"
anstyle-parse = "0.2"
unicode-width = "0.1"
directories = "5"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
